...
            "value": "Остаться"
          }
        },
        "uz": {
          "stringUnit": {
            "state": "translated",
            "value": "Qolish"
          }
        }
      }
    },
    "client.map.locating": {
      "extractionState": "manual",
...
            "value": "Назад"
          }
        },
        "uz": {
          "stringUnit": {
            "state": "translated",
            "value": "Ortga"
          }
        }
      }
    },
    "confirmDialog.cancelOrder.acceptedText": {
      "extractionState": "manual",
...
            "value": "6 месяцев"
          }
        },
        "uz": {
          "stringUnit": {
            "state": "translated",
            "value": "6 oy"
          }
        }
      }
    },
    "income.requestsEmpty": {
      "extractionState": "manual",
...
